--- a/apiProjetoNegocio/src/main/resources/application.properties
+++ b/apiProjetoNegocio/src/main/resources/application.properties
@@ -2,5 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/projetoNegocio
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate = true
+
+###Flyway
+spring.flyway.enabled=false
+spring.flyway.baseline-on-migrate=true
